feat: :bug: links de proyectos arreglados

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="container_btn--proyectos">
-                        <a href="https://mariasmoun.github.io/Juego-del-Ahorcado/" target="_blank">
+                        <a href="https://juanjoseacostarico.github.io/Juego-Ahorcado/index.html" target="_blank">
                             <button class="btn_demo">
                                 <img src="./assets/images/icon-demoProyecto.png" alt="Demostración">DEMO
                             </button>
@@ -256,7 +256,7 @@
                     </div>
 
                     <div class="container_btn--proyectos">
-                        <a href="#" target="_blank">
+                        <a href="https://portafoliojuanacosta.netlify.app/" target="_blank">
                             <button class="btn_demo">
                                 <img src="./assets/images/icon-demoProyecto.png" alt="Demostración">DEMO
                             </button>
