--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div> 
         </section>
 
-        <!-- Contacto -->
+        <!-- INICIO SECCION Contacto 
         <section class="contacto" id="contacto">
             <h1 data-section="contacto" data-value="title">Contacto</h1>
 
@@ -351,6 +351,8 @@
             <i class="fas fa-chevron-up"></i>
         </div>
     </div>
+
+     FIN SECCION CONTACTO -->
 
     <!-- Archivo Js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
