--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="container_button">
-                    <a href="https://drive.google.com/file/d/1Oxxp4229dCo1DKYmMkDp8nYpuXSrXQNQ/view?usp=share_link" target="_blank">
+                    <a href="https://drive.google.com/file/d/17zGO6etAYGgVam37DhkwO3NFA4-gzSr2/view?usp=sharing" target="_blank">
                         <button class="cv_button" data-section="home" data-value="cv_button">Descargar CV</button>
                     </a>
                     <a href="#contacto">
